broken css fixed

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
    
 }
 .Calculator{
-    color:rgba(56, 74, 238, 0.596);
+    color:rgba(14, 15, 15, 0.596);
 }
 
 .mainParent{
